--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "viso-log-lens",
+  "name": "vision-log-lens",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,18 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "next": "14.2.1",
+    "npm": "^10.5.2",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.1"
+    "ua-parser-js": "^1.0.37",
+    "uuidv4": "^6.2.13"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/ua-parser-js": "^0.7.39",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.1",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.1"
+    "typescript": "^5"
   }
 }
